--- a/doc/misc/cl.texi
+++ b/doc/misc/cl.texi
@@ -199,6 +199,8 @@ because they are replaced by other standard Emacs Lisp features.
 Finally, in a very few cases the old @file{cl.el} versions do not
 behave in exactly the same way as the @file{cl-lib.el} versions.
 @xref{Obsolete Features}.
+@c There is also cl-mapc, which was called cl-mapc even before cl-lib.el.
+@c But not autoloaded, so maybe not much used?
 
 Since the old @file{cl.el} does not use a clean namespace, Emacs has a
 policy that packages distributed with Emacs must not load @code{cl} at
@@ -3309,13 +3311,15 @@ that it passes in the list pointers themselves rather than the
 @code{car}s of the advancing pointers.
 @end defun
 
-@c FIXME does not exist?
 @defun cl-mapc function seq &rest more-seqs
 This function is like @code{cl-mapcar}, except that the values returned
 by @var{function} are ignored and thrown away rather than being
 collected into a list.  The return value of @code{cl-mapc} is @var{seq},
 the first sequence.  This function is more general than the Emacs
-primitive @code{mapc}.
+primitive @code{mapc}.  (Note that this function is called
+@code{cl-mapc} even in @file{cl.el}, rather than @code{map*} as you
+might expect.)
+@c http://debbugs.gnu.org/6575
 @end defun
 
 @defun cl-mapl function list &rest more-lists
