font.c (Ffont_at): If WINDOW is specified and it is not displaying the current buffer, signal an error.

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2012-10-30  Kenichi Handa  <handa@gnu.org>
+
+	* font.c (Ffont_at): If WINDOW is specified and it is not
+	displaying the current buffer, signal an error.
+
 2012-10-23  Kenichi Handa  <handa@gnu.org>
 
 	The following change is to make face-font-rescale-alist work
