--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,3 +1,10 @@
+2012-10-31  Glenn Morris  <rgm@gnu.org>
+
+	* eval.texi (Special Forms): No longer special forms: defmacro,
+	defun, save-window-excursion, with-output-to-temp-buffer.
+	* functions.texi (Defining Functions): Defun is now a macro.
+	Defalias is a function.
+
 2012-10-30  Glenn Morris  <rgm@gnu.org>
 
 	* variables.texi (Generalized Variables): Fix typo.
