Small lispref update for cl-lib namespace changes
* doc/lispref/errors.texi (Standard Errors):
* doc/lispref/loading.texi (Autoload): Update for cl-lib namespace changes.

--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,5 +1,8 @@
 2012-10-31  Glenn Morris  <rgm@gnu.org>
 
+	* errors.texi (Standard Errors):
+	* loading.texi (Autoload): Update for cl-lib namespace changes.
+
 	* modes.texi (Defining Minor Modes): "Generalized Variables"
 	section is now in this manual rather than cl.texi.
 
