--- a/doc/lispref/lists.texi
+++ b/doc/lispref/lists.texi
@@ -1275,7 +1275,8 @@ functions for sets include @code{memq} and @code{delq}, and their
 @b{Common Lisp note:} Common Lisp has functions @code{union} (which
 avoids duplicate elements) and @code{intersection} for set operations.
 Although standard GNU Emacs Lisp does not have them, the @file{cl-lib}
-library provides versions.  @xref{Top,, Overview, cl, Common Lisp Extensions}.
+library provides versions.
+@xref{Lists as Sets,,, cl, Common Lisp Extensions}.
 @end quotation
 
 @defun memq object list
