--- a/doc/misc/ChangeLog
+++ b/doc/misc/ChangeLog
@@ -7,6 +7,7 @@
 	(Obsolete Lexical Binding): Rename section from "Lexical Bindings".
 	(Obsolete Macros): Rename section from "Obsolete Lexical Macros".
 	Reword, and add details of flet and labels.
+	(Modify Macros, Function Bindings): Add some xrefs.
 
 2012-10-30  Glenn Morris  <rgm@gnu.org>
 
